creusot/tests/should_fail/recursion/mutual.stderr
error: Mutually recursive functions: when calling m::f1...
  --> mutual.rs:6:5
   |
6  |     pub fn f1() {
   |     ^^^^^^^^^^^
   |
note: then m::f1 calls f2...
  --> mutual.rs:7:9
   |
7  |         super::f2();
   |         ^^^^^^^^^^^
note: then f2 calls f3...
  --> mutual.rs:12:5
   |
12 |     f3();
   |     ^^^^
note: finally f3 calls m::f1.
  --> mutual.rs:16:5
   |
16 |     m::f1();
   |     ^^^^^^^

error: aborting due to 1 previous error

